Add getEyeLocation implementation for living entities when merging proxied senders for converted commands